--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es5",
     "module": "esnext",
     "strict": true,
+    "strictNullChecks": false,
     "jsx": "preserve",
     "importHelpers": true,
     "moduleResolution": "node",
@@ -40,5 +41,5 @@
   ],
   "typeRoots": [
       "src/common/types/vue-global.d.ts",
-  ]
+  ],
 }
